# AliceO2

./: .gitmodules  CHANGELOG.md
Detectors/ITSMFT/common/reconstruction/: CMakeLists.txt
Detectors/ITSMFT/common/reconstruction/src/: Clusterer.cxx
doc/data/: 2024-12-o2_prs.json
